--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-particles-js": "^3.0.3",
     "react-scripts": "3.4.1",
     "tachyons": "^4.11.1"
   },
